-
Bug
-
Resolution: Fixed
-
P1: Critical
-
QBSP 5.15.8
-
None
-
-
439e19be1 (dev), 21098bbb9 (6.8), a2584c81c (6.7), dc9995aa1 (tqtc/lts-6.5), 8f1f65481 (tqtc/lts-6.2), e41649810 (tqtc/lts-5.15)
I have remote X2Go session opened on my laptop to the SLES15SP5 server.
It uses IceWM DE on the server. If I run konsole on remote desktop and my laptop goes to sleep, the remote session suspends. When I resume the remote session I get the KDE Crash Handler with the kcrash attached.
If I run konsole under GDB in remote session I get the attached stacktrace.
It seems that the `outputInfo` variable is not checked on NULL value in the snipped from qtbase/src/plugins/platforms/xcb/qxcbconnection_screens.cpp below.
The same bug is in Qt5 and Qt6.
} else if (screen) {
if (output.crtc == XCB_NONE && output.mode == XCB_NONE) {
// Screen has been disabled
auto outputInfo = Q_XCB_REPLY(xcb_randr_get_output_info, xcb_connection(),
output.output, output.config_timestamp);
if (outputInfo->crtc == XCB_NONE) {
qCDebug(lcQpaScreen) << "output" << screen->name() << "has been disabled";
destroyScreen(screen);
| For Gerrit Dashboard: QTBUG-128906 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 591098,4 | xcb: check validity of RandR output info before using it | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 592368,2 | xcb: check validity of RandR output info before using it | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 592537,1 | xcb: check validity of RandR output info before using it | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 602758,2 | xcb: check validity of RandR output info before using it | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 617837,2 | xcb: check validity of RandR output info before using it | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 618012,2 | xcb: check validity of RandR output info before using it | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |