xcb: check validity of RandR output info before using it

Fixes: QTBUG-128906
Pick-to: 6.8 6.7 6.5 6.2 5.15
Change-Id: Ibafdf4bb9c449b29437b0520299ab407238e5703
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>